last minute changes

--- a/about.html
+++ b/about.html
@@ -142,6 +142,7 @@
                      <a class="logof" href="index.html"><img src="images/logo.png" alt="#"/></a> 
                      <form method="post" action="https://api.web3forms.com/submit" class="form_subscri">
                         <input type="hidden" name="access_key" value="a746d8ed-30f0-4595-9a38-683584007e7d">
+                        <div class="row">
                            <div class="col-md-12">
                               <h3>Subscribe Now</h3>
                            </div>
