--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@
                      <div class="row">
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/g1.jpg" alt="Bridge">
+                              <img src="images/img.png" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
                                  <a class="view_btn" href="images/img.png"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
@@ -132,10 +132,10 @@
                         </div>
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/img.jpg" alt="Bridge">
+                              <img src="images/img1.jpg" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
-                                 <a class="view_btn" href="images/g4.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                 <a class="view_btn" href="images/img1.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                               </div>
                            </div>
                         </div>
@@ -145,19 +145,19 @@
                      <div class="row">
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/g2.jpg" alt="Bridge">
+                              <img src="images/img-2.jpg" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
-                                 <a class="view_btn" href="images/g2.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                 <a class="view_btn" href="images/img-2.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/g5.jpg" alt="Bridge">
+                              <img src="images/img3.jpg" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
-                                 <a class="view_btn" href="images/g5.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                 <a class="view_btn" href="images/img3.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                               </div>
                            </div>
                         </div>
@@ -167,19 +167,19 @@
                      <div class="row">
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/g3.jpg" alt="Bridge">
+                              <img src="images/img6.jpg" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
-                                 <a class="view_btn" href="images/g3.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                 <a class="view_btn" href="images/img6.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                               </div>
                            </div>
                         </div>
                         <div class="col-md-12 ma_bottom30">
                            <div class="lightbox">
-                              <img src="images/g6.jpg" alt="Bridge">
+                              <img src="images/img5.jpg" alt="Bridge">
                               <div class="view_main">
                                  <h3>Couple</h3>
-                                 <a class="view_btn" href="images/g6.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
+                                 <a class="view_btn" href="images/img5.jpg"><i class="fa fa-search-plus" aria-hidden="true"></i></a>
                               </div>
                            </div>
                         </div>
@@ -197,7 +197,8 @@
                <div class="row border_bo1 ">
                   <div class="col-md-4">
                      <a class="logof" href="index.html"><img src="images/logo.png" alt="#"/></a> 
-                     <form class="form_subscri">
+                     <form method="post" action="https://api.web3forms.com/submit" class="form_subscri">
+                        <input type="hidden" name="access_key" value="a746d8ed-30f0-4595-9a38-683584007e7d">
                         <div class="row">
                            <div class="col-md-12">
                               <h3>Subscribe Now</h3>
@@ -228,11 +229,11 @@
                      <div class="infoma">
                         <h3>Helpful Links</h3>
                         <ul>
-                           <li>There are many </li>
-                           <li>variations of pas</li>
-                           <li>sages of Lorem  </li>
-                           <li>psum available,  </li>
-                           <li>but the majority  </li>
+                           <li>Home</li>
+                           <li>About us</li>
+                           <li>Contact us</li>
+                           <li>Gallery</li>
+                           <li>Couple</li>
                         </ul>
                      </div>
                   </div>
@@ -254,7 +255,7 @@
                         <ul class="conta">
                            <li><i class="fa fa-map-marker" aria-hidden="true"></i>Locations 
                            </li>
-                           <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>+71 12345678901</li>
+                           <li><i class="fa fa-volume-control-phone" aria-hidden="true"></i>+254 12345678901</li>
                            <li> <i class="fa fa-envelope" aria-hidden="true"></i><a href="Javascript:void(0)"> demo@gmail.com</a></li>
                         </ul>
                         <ul class="social_icon">
@@ -271,7 +272,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. <a href="https://html.design/"> Free html Templates</a></p>
+                        <p>© 2024 All Rights Reserved. <a href="https://excelskennedy2.github.io/Portfolio/"> Excels Kennedy</a></p>
                      </div>
                   </div>
                </div>
